--- a/backend/myAppsyncStudy/package.json
+++ b/backend/myAppsyncStudy/package.json
@@ -1,42 +1,31 @@
 {
-  "name": "myappsyncstudy",
+  "name": "my-appsync-study",
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "test": "sls invoke test -p test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "amazon-cognito-identity-js": "^4.5.10",
-    "aws-sdk": "^2.791.0",
-    "bluebird": "^3.7.2",
-    "source-map-support": "^0.5.10",
-    "uuid": "^8.3.2"
+    "babel-polyfill": "^6.26.0",
+    "bluebird": "^3.5.1",
+    "node-fetch": "^1.7.3",
+    "oauth": "^0.9.15",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
-    "serverless-appsync-plugin": "^1.1.2",
-    "@types/aws-lambda": "^8.10.17",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "^10.12.18",
-    "@types/serverless": "^1.72.5",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "fork-ts-checker-webpack-plugin": "^3.0.1",
-    "mocha": "^8.3.2",
-    "prettier": "^2.1.2",
-    "serverless-mocha-plugin": "^1.12.0",
-    "serverless-offline": "^6.9.0",
-    "serverless-webpack": "^5.2.0",
-    "supertest": "^6.1.3",
-    "ts-loader": "^5.3.3",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.2.4",
-    "webpack": "^4.29.0",
-    "webpack-node-externals": "^1.7.2"
-  },
-  "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
-  "license": "MIT"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "body-parser": "^1.15.2",
+    "cors": "2.8.4",
+    "env-cmd": "^5.0.0",
+    "imports-loader": "^0.7.1",
+    "jest": "^21.2.1",
+    "serverless-webpack": "^4.1.0",
+    "webpack": "^3.8.1",
+    "webpack-node-externals": "^1.6.0"
+  }
 }
