--- a/backend/myAppsyncStudy/serverless.yml
+++ b/backend/myAppsyncStudy/serverless.yml
@@ -14,34 +14,15 @@ provider:
   name: aws
   runtime: nodejs14.x
   lambdaHashingVersion: 20201221
-
   stackName: appsyncstudy
   apiName: appsyncstudy
-
   stage: dev
   region: ap-southeast-2
-
   apiGateway:
     metrics: true
-
   environment:
     REGION: ap-southeast-2
     END_POINT: "http://localhost:8000"
-    # COGNITO_USER_POOL_ID: ap-southeast-2_pNT4oXppf
-    # COGNITO_USER_POOL_CLIENT_ID: 37t4cmhhsufk0e44hqdivog2cf
-
-    # DYNAMO_USER_PROFILE_TABLE: Dev-UserProfile
-    # DYNAMO_VIDEO_TABLE: video-pipeline
-
-    # VIDEO_UPLOAD_TEMPORARY_BUCKET: dev-video-upload-temp-bucket
-    # VIDEO_THUMBNAIL_BUCKET: dev-video-thumbnail-bucket
-    # VIDEO_PRODUCT_LINK_IMAGE_BUCKET: dev-video-product-link-image-bucket
-    # VIDEO_PIPELINE_SOURCE_BUCKET: video-pipeline-source-6revag747q0x
-    # VIDEO_PIPELINE_DESTINATION_BUCKET: video-pipeline-destination-ofjnsl6xbzb
-    # PROFILE_IMAGES_BUCKET: stomble-profile-images
-
-    # DEFAULT_PROFILE_IMAGES_AMOUNT: 5
-
   # Permissions
   iamRoleStatements:
     - Effect: Allow
@@ -55,18 +36,15 @@ provider:
   # # Specify Stomble AWS credentials from ~/.aws/credentials
   # profile: stomble
 
-
-
 functions:
   graphql:
     handler: handler.graphqlHandler
 
 custom:
-
   appsync-simulator:
     apiKey: da2-fakeApiId123456
     watch: false
-    schema: schema.graphql
+    # schema: schema.graphql
 
   accountId: abc
   dynamodb:
@@ -157,7 +135,12 @@ custom:
         field: updateUserInfo
         request: "updateUserInfo-request-mapping-template.vtl"
         response: "updateUserInfo-response-mapping-template.vtl"
-    schema: schema.graphql
+      # - dataSource: Tweets
+      #   type: Subscription
+      #   field: addTweet
+      #   request: "addTweet-request-mapping-template.vtl"
+      #   response: "addTweet-response-mapping-template.vtl"
+    # schema: schema.graphql
     dataSources:
       - type: AMAZON_DYNAMODB
         name: Users
